# ChangeLog for dev-java/spring-framework
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Dec 2007; <ali_bush@gentoo.org> +metadata.xml,
  +spring-framework-2.5.ebuild:
  Adding half finished 2.5
