@@ -1,4 +1,6 @@
 DIST spring-framework-2.5-with-dependencies.zip 76046081 RMD160 70e7317e626869324ef0af9fcf3fa730d8828676 SHA1 9b519547fb730814ab326eefd8f2eeb28e76cf5a SHA256 42af81963c86f6d7b41d70509185565979aeb30bc4afd73913abf8b8f5357b9b
+DIST spring-framework-2.5.4-with-dependencies.zip 81623250 RMD160 0650a2488592e25a020c95a66c4afb660dcff2eb SHA1 1692cd5d3c9d0b995b7a6dae5c2660c368fc47b6 SHA256 2b98896dfde1818de320522a4e7676cf4e053d8435e45d688de70f41b5d7c8e5
+EBUILD spring-framework-2.5.4-r1.ebuild 12044 RMD160 fbe593e1cde30c1eddf430b54b373e7b6086d17f SHA1 92c739f38d84b78f374be70968ff972312562b8b SHA256 35c2974d4457ba40a1a270826cb2e16c46038ddc9bdbd650743c86c6d0b133ef
 EBUILD spring-framework-2.5.ebuild 11286 RMD160 d2ecd0eff20bab345e8ea005429ee8bbcaaf29ab SHA1 d85d83cdb77ffc54d44070548c8554dbe7e5a697 SHA256 89da8b32f25d1cd9884bf961bb50a998af26adf9003d9c35f3883143597c9c0a
-MISC ChangeLog 238 RMD160 7f2c9788a608d2d54465903a029e095f14b505de SHA1 221213b1674ad0f46322c9f7d76d7b9bc9d2efce SHA256 49ab786bd2c22f5539b4587fb56b42c366080a2fc6e3ac08b2a73920f348ddba
+MISC ChangeLog 371 RMD160 1108e491ac4cb11e38685a0feaf6fbd6bd79caf2 SHA1 8660b77a6ef24b0ca29d85bee31112b52df7a27e SHA256 7e0940bc4ee6460afd3e2395fc66c70746383272a8bd1ae13d17aa367396da52
 MISC metadata.xml 360 RMD160 148a5640c7f12db105282feedf2321ae33b71953 SHA1 8d5763afe0d1cf70dce58dbabb2d86b2722db630 SHA256 f04023a8947a92c1fd562e17ada088df444e5ba851846721b52e6f1effe33193
