@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/spring-framework
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  04 Sep 2008; Alistair Bush <ali_bush@gentoo.org>
+  +spring-framework-2.5.4-r1.ebuild:
+  Bump spring to 2.5.4 get rid of most deps
 
   28 Dec 2007; <ali_bush@gentoo.org> +metadata.xml,
   +spring-framework-2.5.ebuild:
